syntax = "proto3";
//编译生成的APK文件多包保存
option java_multiple_files = true;
//编译生成的Java文件存放的包名
option java_package = "com.hgldp.grpc";
option java_outer_classname = "SimPleProto";


//GRPC 编译生成的类的=ExampleGrpc+Grpc
service ExampleGrpc{
    rpc sendSimpleMessage(HelloRequest) returns(HelloResponse){}
    rpc getListMessage(HelloRequest) returns(stream StudentResponse){}

    rpc getStudentList(stream HelloRequest) returns(StudentResponseList){}

    rpc BiTalk(stream StreamRequest) returns(stream StreamResponse){}
}


message HelloRequest{

    string no = 1;
}

message HelloResponse{
    string name=1;
}


message StudentResponse{

    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList{
    repeated StudentResponse studentResponse = 1;
}


message StreamRequest{
    string request_info = 1;
}

message StreamResponse{
    string response_info = 1;
}

